--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -100,7 +100,15 @@ layout: compress
       <div class="container">
         <div class="post-content">
 
-          {% include disqus.html %}
+          <!-- {% include disqus.html %} -->
+          <script src="https://utteranc.es/client.js"
+            repo="servrox/servrox.github.io"
+            issue-term="pathname"
+            label="💬Site Comment✨"
+            theme="github-light"
+            crossorigin="anonymous"
+            async>
+          </script>
 
         </div>
       </div>
